Fix Hyperlink wraping

--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,8 @@ button:hover {
 	text-transform: uppercase;
 	text-decoration: none;
 	letter-spacing: 0.15rem;
-	line-height: 1.5rem;
+    line-height: 1.5rem;
+    white-space: nowrap;
 	color: var(--font-color);
     position: relative;
     cursor: pointer;
